[gd_scene load_steps=14 format=3 uid="uid://dmflrvayi5dvb"]

[ext_resource type="Script" path="res://input/Input.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/plex_mono_28.tres" id="2"]
[ext_resource type="Script" path="res://Game.gd" id="3"]
[ext_resource type="Script" path="res://CommandProcessor.gd" id="4"]
[ext_resource type="PackedScene" path="res://rooms/GameRoom.tscn" id="5"]
[ext_resource type="Script" path="res://rooms/RoomManager.gd" id="6"]
[ext_resource type="Script" path="res://Player.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://t8earpqt4r2x" path="res://GameInfo.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://dogws7ymqkh3q" path="res://SidePanel.tscn" id="9"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.286275, 0.286275, 0.286275, 1)

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="4"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="Player" type="Node" parent="."]
script = ExtResource("7")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("4")

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("6")

[node name="StartingRoom" parent="RoomManager" instance=ExtResource("5")]
anchors_preset = -1
anchor_top = 0.000771586
anchor_bottom = 0.000771586
offset_left = 1393.53
offset_top = -401.655
offset_right = 1643.53
offset_bottom = -198.655
room_name = "My Room"
room_description = "your own bedroom. Your toys, clothes, memories, and comfy bed are present. You should head outside and talk to your mother."

[node name="LivingRoom" parent="RoomManager" instance=ExtResource("5")]
offset_left = -1481.0
offset_top = -744.0
offset_right = 170.0
offset_bottom = -472.0
room_name = "Living Room"
room_description = "your home, the player's home. It is homely and filled with fond memories of your earlier life. Your Dad has just left on a business trip and you're alone with your mom. The scent of deliciousness takes the room as your mom prepares a feast for the festival."

[node name="OutsideHome" parent="RoomManager" instance=ExtResource("5")]
offset_left = 389.533
offset_top = -1082.66
offset_right = 655.533
offset_bottom = -879.655
room_name = "Outside the House"
room_description = "outside the Player's home. It faces the Burgmeister's Road in the front, the garden to the north, and the great forest of Trondelag to the south. Your mom has put up decorations in celebration of the festival."

[node name="MomsGarden" parent="RoomManager" instance=ExtResource("5")]
offset_left = 729.878
offset_top = -1080.35
offset_right = 995.878
offset_bottom = -880.355
room_name = "Mom's Garden"
room_description = "the garden filled with wildlife. It is filled with freshly planted flowers such as Magnolias, Daffodils, Roses, and Hibiscus, as well as a plethora of fruits and vegetables. Your Mom has taken care of this garden with diligence and love. The gopher attempts to steal a carrot, but runs away after seeing your silhouette."

[node name="Road1" parent="RoomManager" instance=ExtResource("5")]
anchors_preset = -1
anchor_left = -0.00045228
anchor_right = -0.00045228
anchor_bottom = 0.166667
offset_left = 1083.46
offset_top = -1108.0
offset_right = 1407.46
offset_bottom = -886.0
room_name = "Burgmeister's Road"
room_description = "the road outside your home. It leads to Rizal Square to the east and Silliman Hall to the North, while the savage lands of the Great Trondelag Forest lie in the south."

[node name="VillageSquare" parent="RoomManager" instance=ExtResource("5")]
offset_left = 1092.0
offset_top = -702.0
offset_right = 1414.0
offset_bottom = -455.0
room_name = "Rizal Square"
room_description = "the village center surrounded by commercial shops and houses. It leads to Doltz Road to the north, the Spencer Estate to the east, and the Hawksburn Mall to the south. Many events are hosted here such as the festival reaches its climax such as concerts, parties, games, and more."

[node name="Road2" parent="RoomManager" instance=ExtResource("5")]
offset_left = 391.075
offset_top = -1348.32
offset_right = 657.075
offset_bottom = -1145.32
room_name = "Doltz Road"
room_description = "the road that leads to Hibbard Gate. It leads to Sillman Hall to the West, Hilda's Inn to the east, Rizal Square to the south, and Hibbard Gate to the north. It is currently packed with people as stalls litter the sides as the village festival enters the next phase of celebrations."

[node name="VillageGate" parent="RoomManager" instance=ExtResource("5")]
offset_left = 87.5334
offset_top = -1080.66
offset_right = 337.533
offset_bottom = -877.655
room_name = "Hibbard Gate"
room_description = "he gate that leads to the outside of the village. Named after Hibbardos the Magnificent, the gate protects the village from the outside world and hosts as a barrier between civilization and the wilderness. The gate is currently busy with many visitors currently traversing in and out as the village celebrates the recent victory at Jester’s Pass."

[node name="HawksburnStore" parent="RoomManager" instance=ExtResource("5")]
offset_left = 2258.0
offset_top = -115.0
offset_right = 4753.0
offset_bottom = 85.0
room_name = "Jacob's Store"
room_description = "The main store of the great Hawksburn merchant family, and home to your good friend, Jacob Hawksburn, One of the three sons of Hanz the Inventor and Matilda the Tailor. The store hosts a plethora of local and exotic goods, fitting for every situation and need."

[node name="SpencerEstate" parent="RoomManager" instance=ExtResource("5")]
offset_left = 2706.0
offset_top = -381.0
offset_right = 5633.0
offset_bottom = -181.0
room_name = "Emily's House"
room_description = "the vast estate east of the village and home to the rulers of the Duchy or Wroclaw, as well as the home of your dear friend Emily Spencer, daughter of the Hero of Cleganesfield, Jermaine the Warrior and Mary the Healer. You are a welcomed guest to the home and the family treats you as their adoptive son."

[node name="TheInn" parent="RoomManager" instance=ExtResource("5")]
offset_left = 2148.0
offset_top = 135.0
offset_right = 5228.0
offset_bottom = 335.0
room_name = "Hilda's Inn"
room_description = "the main inn within the village and is owned by Hilda the Saint, the village chairman's wife. It hosts many rooms for weary travelers and provides accommodation and entertainment for both travelers and locals. Many visitors come to the inn, both high and low, as the inn serves all people, regardless of class and status."

[node name="BarangayHall" parent="RoomManager" instance=ExtResource("5")]
offset_left = 2146.0
offset_top = 417.0
offset_right = 5859.0
offset_bottom = 617.0
room_name = "Barangay Hall"
room_description = "the administrative center of Silliman Village. It is currently headed by the current Barangay Chairman, Dane the Wise. Named after Sillimanus the Great, Emperor of the First Human Empire, the village looks towards the ancients for wisdom and strength. It has been decorated heavily in celebration of the recent victory at Jester’s Pass in the war against the Goblin Kingdom in the south."

[node name="Wildlands" parent="RoomManager" instance=ExtResource("5")]
offset_left = 403.679
offset_top = -1592.38
offset_right = 669.679
offset_bottom = -1389.38
room_name = "The Wildlands"
room_description = "the area outside Hibbard Gate. The road pushes on towards the nearby settlement of Vernon Village, however the path goes through the great Bacolod Forest with many dangers awaiting within, from common threats such as wolves, slimes, and bandits, to the infamous ones such as the dreaded witch of the Porcelain Tower, Siquijora the Heartless, the great sorceror Credolax of Moonstone peak, the great beast Softengeroz of the badlands, and the dreaded 3-headed dragon of the Skylancer Mountains, Thesisarox the Hellspawn."

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer/Columns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GameInfo" parent="Background/MarginContainer/Columns/Rows" instance=ExtResource("8")]
layout_mode = 2

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Columns/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Columns/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_styles/normal = SubResource("5")
theme_override_styles/focus = SubResource("4")
max_length = 48
script = ExtResource("1")

[node name="SidePanel" parent="Background/MarginContainer/Columns" instance=ExtResource("9")]
layout_mode = 2
size_flags_horizontal = 8

[node name="InGameMenu" type="MenuButton" parent="Background/MarginContainer/Columns/SidePanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "[ || ]"

[connection signal="text_submitted" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_submitted" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
[connection signal="pressed" from="Background/MarginContainer/Columns/SidePanel/InGameMenu" to="." method="_on_in_game_menu_pressed"]
